--- a/Dashboard_WEB_API/appsettings.json
+++ b/Dashboard_WEB_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultDb": "User ID=postgres;Password=1111;Host=localhost;Port=5432;Database=Dashboard_WEB_API;"
+  }
 }
