--- a/back/Dashboard_WEB_API/appsettings.Development.json
+++ b/back/Dashboard_WEB_API/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Email": "dudok405@gmail.com",
+    "Password": "picj yajp fsnd sbbi"
+  },
+  "JwtSettings": {
+    "SecretKey": "mY8Lk9Pq1r2T3v4Z5x6A7b8C9d0E1F2G",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "ExpiresInHours": 24
   }
 }
+
