--- a/back/Dashboard_WEB_API/Dashboard_WEB_API.csproj
+++ b/back/Dashboard_WEB_API/Dashboard_WEB_API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Dashboard_WEB_API.DAL\Dashboard_WEB_API.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="storage\images\" />
+  </ItemGroup>
+
 </Project>
