--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.2.8",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@mui/x-date-pickers": "^8.19.0",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
