--- a/back/Dashboard_WEB_API/appsettings.json
+++ b/back/Dashboard_WEB_API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultDb": "User ID=postgres;Password=1111;Host=localhost;Port=5432;Database=Dashboard_WEB_API;"
+    "DefaultDb": "User ID=postgres;Password=1111;Host=postgres;Port=5432;Database=Dashboard_WEB_API;"
+
   },
   "JwtSettings": {
     "Issuer": "WEB_API_BACK",
