--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,21 +2,22 @@ FROM node:22.21-alpine AS build
 
 WORKDIR /app
 
-COPY package*.json .
+COPY package*.json ./
 
 RUN npm ci
-
-RUN npm i -g serve
 
 COPY . .
 
 RUN npm run build
 
-FROM caddy:2-alpine
+FROM node:22.21-alpine
 
-COPY --from=build /app/dist /usr/share/caddy
+WORKDIR /app
 
-EXPOSE 80
-EXPOSE 443
+RUN npm i -g serve
 
-CMD [ "serve", "-s", "dist", "-p", "5173" ]
+COPY --from=build /app/dist ./dist
+
+EXPOSE 5173
+
+CMD ["serve", "-s", "dist", "-l", "5173"]
