--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,3 +1,4 @@
+# Stage 1: Build React
 FROM node:22.21-alpine AS build
 
 WORKDIR /app
@@ -8,10 +9,12 @@ RUN npm ci
 COPY . .
 RUN npm run build
 
+# Stage 2: Serve static files with Caddy
 FROM caddy:2-alpine
 
+# Копіюємо зібраний фронтенд
 COPY --from=build /app/dist /usr/share/caddy
 
+# Caddy стартує автоматично
 EXPOSE 80
 EXPOSE 443
-
