--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   db:
@@ -7,21 +7,21 @@ services:
     ports:
       - "5433:5432"
     environment:
-      - "POSTGRES_PASSWORD=qwerty"
-      - "POSTGRES_DB=pd421_games_store"
+      - POSTGRES_PASSWORD=qwerty
+      - POSTGRES_DB=pd421_games_store
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 3s
       retries: 5
     volumes:
-      - db:/var/lib/postgresql/data
+      - db:/var/lib/postgresql
     networks:
       - pd421_gameshop
 
   api:
-    build: ./back
-    image: potapchuk22/pd421_back
+    build:
+      context: ./back 
     container_name: api
     environment:
       - ConnectionStrings__DefaultDb=User ID=postgres;Password=qwerty;Host=db;Port=5432;Database=pd421_games_store;
@@ -41,7 +41,6 @@ services:
       args:
         - API_URL=http://localhost:5000/api
         - IMAGES_URL=http://localhost:5000/images
-    image: potapchuk22/pd421_front
     container_name: front
     depends_on:
       - api
